--- a/index.html
+++ b/index.html
@@ -100,6 +100,10 @@
                         <a href="wood/potentialEcoFriendlyWoodFinishes.html"> Potential Eco Friendly Wood Finishes</a>
                     </div>
                     <div class="section">
+                        <h3 class="section-header">Painting</h3>
+                        <a href="painting/paintings.html">Notes on my paintings</a>
+                    </div>
+                    <div class="section">
                         <h3 class="section-header">...other</h3>
                         <a href="how-did-i-fix.html">How did i fix...</a>
                         <a href="furniturebrands.html">Second Hand Furniture Brands</a>
