--- a/mechanics/manufacturingProcesses.html
+++ b/mechanics/manufacturingProcesses.html
@@ -48,11 +48,12 @@
                 	<li>Ejector pins - necessary as cooled plastic sucks onto the mold</li>
                 	<li>Using draft angles - it's very diffictul to remove pieces which have straight parallel sides. A draft angle makes things much easier</li>
                 </ul>
-                Important things when designing parts for injection molding include (Covered in <a href="https://www.youtube.com/watch?v=viwbxM6F7zc">this video</a>)
+                Important things when designing parts for injection molding include )
                 <ul>
-                	<li>draft anlge for release</li>
-                	<li>vents for air</li>
-                	<li>place for slug (unmelted plastic from nozzle end) to go</li>
+                	<li>draft angle for release (Covered in <a href="https://www.youtube.com/watch?v=viwbxM6F7zc">this video</a></li>   
+                	<li>vents for air (maybe 0.05mm) (Covered in <a href="https://www.youtube.com/watch?v=viwbxM6F7zc">this video</a></li>
+                	<li>place for slug (unmelted plastic from nozzle end) to go (Covered in <a href="https://www.youtube.com/watch?v=viwbxM6F7zc">this video</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=UVTJfnzdG1U">ejector pins</a></li>
                 </ul>
                 <strong>Open Questions - </strong>Could injection molding be done more slowly, but at low pressure if the mold was heated to the same temp as the injecting barrel? Maybe the cooling shrinkage would lock the part to the mold too tightly, or crack the part? <br><br>
             </div>
