--- a/wood/potentialEcoFriendlyWoodFinishes.html
+++ b/wood/potentialEcoFriendlyWoodFinishes.html
@@ -90,6 +90,22 @@ https://www.finewoodworking.com/project-guides/finishing/how-to-create-a-charred
 Shou sugi ban is a traditional Japanese process of charring cedar on the outside to protect the wood beneath, rendering it fireproof. Also, it allows you to be lazy. If you’re burning off the exterior of the wood, there’s no need to clean up planing tracks (unless they’re quite deep) or sand; the fire will take care of that for you.  <br>
 While the process works on all woods, I think it looks best on softwoods that have a clear difference between earlywood and latewood (yellow pine and fir, for example).  <br>
 In most cases, it’s best to char your work before assembly (typical shop glues will not withstand this process). Tape off any tenons and stuff a wet rag into any mortises. In other words, don’t burn any of your carefully fitted joints because they will no longer be tightly fitted after burning.  <br>
+<br>
+<br>
+
+CHRIS SCHWARZ BEESWAX FINISH  <br>
+https://www.instagram.com/p/ChFp1GtD3kS/ <br>
+Linseed Oil & Wax Finish Recipe <br>
+2 cups (16 ounces by volume) of raw linseed oil <br>
+3/4 cup beeswax <br>
+2 tablespoons limonene <br>
+ <br>
+I make this finish in a metal quart paint can from the hardware store. Place the metal can on a hotplate, fill the can with the raw linseed oil and turn on the hotplate to between low and medium. Monitor the temperature with a cooking thermometer. Beeswax melts at 151° (F). As soon as the temperature of the oil reaches 151°, pour the beeswax pellets and limonene into the oil. Stir with a stick until the beeswax melts (it takes less than a minute). Turn off the hotplate and remove the mixture from heat.
+ <br><br>
+Allow it to cool. It will become a paste after about an hour of cooling. Seal. You can use it immediately or keep it indefinitely.
+ <br>
+Caution: Whenever you deal with linseed oil in any form, spread the rags outside to dry. Never bunch them up and throw them away. Linseed oil generates heat as it cures. This can cause a fire. Other people dispose of the rags by burning them (this is common in Europe). Others put them in plastic bags with water and throw them away.
+<br><br>
 
  </div>
         </div>
