--- a/index.html
+++ b/index.html
@@ -97,10 +97,12 @@
                     </div>
                     <div class="section">
                         <h3 class="section-header">Wood</h3>
+                        <a href="wood/woodworkingBasics.html"> Woodworking Basics</a>
                         <a href="wood/potentialEcoFriendlyWoodFinishes.html"> Potential Eco Friendly Wood Finishes</a>
                     </div>
                     <div class="section">
                         <h3 class="section-header">Painting</h3>
+                        <a href="painting/paintingTips.html">Painting Tips</a>
                         <a href="painting/paintings.html">Notes on my paintings</a>
                     </div>
                     <div class="section">
@@ -109,6 +111,7 @@
                         <a href="furniturebrands.html">Second Hand Furniture Brands</a>
                         <a href="wood/CookingForGroups.html">Cooking For Groups</a>
                         <a href="LatexCheatsheet.html">Latex Cheatsheet</a>
+                        <a href="gardening/gardening.html">Gardening</a>
                     </div>
                 </div>
             </div>
