multiple additions for 3D printing and airbnb

--- a/airbnb/local-amenities.html
+++ b/airbnb/local-amenities.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container mt-4">
         <div class="row">
-            <div class="page-title col-12">Local Essentials</div>
+            <div class="page-title col-12">Local Amenities</div>
         </div>
         <div class="row">
             <div class="row">
