--- a/gardening/gardening.html
+++ b/gardening/gardening.html
@@ -20,13 +20,21 @@
         <div class="row">
             <div class="col-12 row-content">
                 <div class="h4" id="contents">Contents</div>
-        		<div class="content-link"><a href="#Monstera">Monstera</a></div>
+                <div class="content-link"><a href="#general">General Info</a></div>
+                <div class="content-link"><a href="#Monstera">Monstera</a></div>
         		<div class="content-link"><a href="#DracaenaReflexa">Dracaena Reflexa</a></div>
-                <div class="content-link"><a href="#Dracaenamarginata"> Dracaena marginata</a></div>
+                <div class="content-link"><a href="#pothos">Pothos</a></div>
                 <div class="content-link"><a href="#Sansevieria">Sansevieria</a></div>
+                <div class="content-link"><a href="#Dracaenamarginata"> Dracaena marginata</a></div>
                 <div class="content-link"><a href="#philodendrons">Philodendrons</a></div>
                 <div class="content-link"><a href="#pachiraaquatica">pachira aquatica (Money Tree)</a></div>
                 <div class="content-link"><a href="#climbers">Possibble Climbers</a></div>
+            </div>
+        </div>
+        <div class="row content-section">
+            <div class="col-12 row-content">
+                <div class="h4" id="general">General Info</div>
+                <img class="medium-image" src="stemParts.webp" alt="">
             </div>
         </div>
         <div class="row content-section">
@@ -36,7 +44,7 @@
                 Indoors, ideally with a temperature between 15C and 28C <br>
                 Prefers bright indirect light, rather than direct sun. The more bright inirect light it gets, the more holes will form in the leaves <br>
                 Ideally, it will face the main light source, as in the diagram below. Front being the side th leaves come out, and back being the root and support side<br>
-                <img src="monsteraPositioning.png" alt="">
+                <img class="small-image" src="monsteraPositioning.png" alt="">
                 <br><br>
                 <h5>Watering</h5>
                 In general water when the soil is dry, or the leaves are drooping <br>
@@ -58,11 +66,11 @@
 				<h5>Styling</h5>
 				In order to control the shape of the monstera, and have it grow attractively, a trellis or ladder is better than stakes or a column as it gives more control. <br>
                 Monstera shaped trellis is a cool idea ( although maybe needs a multileaf trellis to really work <br>
-                <img src="monsteraTrellis.webp" alt="">
+                <img class="small-image" src="monsteraTrellis.webp" alt="">
                 <br><br>
 				<h5>Troubleshooting</h5>
-				Yellowing leaves - likely due to overwatering. Make sure not watering too often, or sitting in water as they don't like wet feet
-				Browning leaves - lack of humidity in environment - Use a diffuser, use a pebble try, group plants together, or mist the monstera
+				<strong>Yellowing leaves</strong> - likely due to overwatering. Make sure not watering too often, or sitting in water as they don't like wet feet <br>
+				<strong>Browning leaves</strong> - lack of humidity in environment - Use a diffuser, use a pebble try, group plants together, or mist the monstera <br>
             </div>
         </div>
 
@@ -88,19 +96,54 @@
 				If you chop a stem in two, you can plant the branch in potting mix, and the stem will grow new stems. So, 2 plants from 1.
 				<br><br>
 				<h5>Troubleshooting</h5>
-				Yellow or brown leaf tips - may be due to too many minerals in tap water - try using rainwater or distilled water. Alternatively, trim the dodgy end off (trim it into a leaf end shape so you end up with a shorter but normal looking leaf shape)
+				<strong>Yellow or brown leaf tips</strong> - may be due to too many minerals in tap water - try using rainwater or distilled water. Alternatively, trim the dodgy end off (trim it into a leaf end shape so you end up with a shorter but normal looking leaf shape)
             </div>
         </div>
-
         <div class="row content-section">
             <div class="col-12 row-content">
-                <div class="h4" id="Dracaenamarginata"> Dracaena marginata</div>
-                
+                <div class="h4" id="pothos">Pothos (Epipremnum)</div>
+                <h5>Where should it be?</h5>
+                Place pothos in bright, indirect light. They will also tolerate low light, but will not grow as well and may lose some of the variegation. <br>
+                Location should be warm, ideally room temperature. If exposed to regular drafts or colder temperatures, the plant's growth can be affected. 
+                <br><br>
+                <h5>Watering</h5>
+                In general water when the soil is dry, or the leaves are drooping <br>
+                This will be roughly once every one to 2 weeks in summer <br>
+                Signs of overwatering include yellowing leaves and black stems, while underwatered plants will wilt and their potting mix will dry out.
+                <br><br>
+                <h5>Pruning</h5>
+                Use a sharp, clean blade and cut just below a node. Prune close to the crown to create a bushier plant. If you want to shorten up a long vine, snip it off wherever you prefer.
+                <br><br>
+                <h5>Propagation</h5>
+                Cut about 2cm on either side of a leaf node, so you have a leaf, node and aeriel root on the cutting (pic 1). 
+                <br>Place the cuttings in a jar of water with the leaves above water, nodes and roots submerged (pic 2), and change the water every few days until a root is well formed and a new leaf has grown (pic 3) - around 3 to 6 weeks. 
+                <br>Pot carefully into wet soil initially, as the plant is used to water. <br>
+                <img class="small-image" src="pothosProp1.png" alt=""> 
+                <img class="small-image" src="pothosProp2.png" alt=""> 
+                <img class="small-image" src="pothosProp3.png" alt="">
+                <br><br>
+                <h5>Troubleshooting</h5>
+                <strong>Yellowing leaves</strong> - most likely overwatering <br>
+                <strong>Black stems</strong> - most likely overwatering <br>
             </div>
-        </div>
+        </div>        
         <div class="row content-section">
             <div class="col-12 row-content">
                 <div class="h4" id="Sansevieria">Sansevieria</div>
+                <h5>Where should it be?</h5>
+                <br><br>
+                <h5>Watering</h5>
+                <br><br>
+                <h5>Pruning</h5>
+                <br><br>
+                <h5>Propagation</h5>
+                <br><br>
+                <h5>Troubleshooting</h5>                
+            </div>
+        </div>
+        <div class="row content-section">
+            <div class="col-12 row-content">
+                <div class="h4" id="Dracaenamarginata"> Dracaena marginata</div>
                 
             </div>
         </div>
