--- a/painting/paintingTips.html
+++ b/painting/paintingTips.html
@@ -102,6 +102,52 @@
                     <li>When modifying a scene you're painting, it's always better to only add/remove small features. Adding or removing large features is asking for trouble</li>
                     <li>A viewfinder is useful when selecting what to paint from nature - it is a piece or pair of cards at which can be used to select a rectangle to paint. Best painted a warm mid grey</li>
                     <li>Squinting is good to see balance of values and to see the large masses</li>
+                    <li>When foreground colors are modified and repeated in the lighter shades and grays of distance, the repetition adds balance to the composition.</li>
+                    <li>Think in 3 dimensions, not 2</li>
+                    <li>Studies are the most important part of coming up with a good painting. Practising studies direct from nature and completely imagined is very beneficial</li>
+                    <li>Repeated studies and paintings of a single subject are recommended</li>
+                    <li>Having more than one main point of interest, or very equal competing masses are problems</li>
+                    <li>Plan well, then paint fast is often a successful tactic</li>
+                    <li>Plate X has good ideas for reworking natural features which make troublesome subjects</li>
+                    parallel curves are generally bad. for example, 2 hill tops one on directly behind the other.
+
+                    mountains or hills should be either mostly in shade or mostly in sunlight. half half is not good.
+
+                    TREES
+                    when painting trees, variety in density is good. some densely leaved, others sparsely 
+
+                    don't feel you have to have the whole tree in frame. letting part of it run outside the frame is not a problem
+
+                    Trees are suitable for rearrangement, the main rule being that the positioning should appear casual and possible
+
+                    CLOUDS
+                    shadowing the ground, keeping horizon or land low, and unequal sky/cloud balance are the basics of cloud picture composition
+
+                    In cloud or sea pictures, it's very common to have extreme textural contrast between the solid (land, rocks, shore) and the non solid (sea, clouds)
+
+                    clouds in sunlight are generally the lightest value in a scene
+
+                    where clouds are the subject, a low horizon is common. 
+
+                    for cloud pictures, the balance of clouded and clear sky is important. as with other subjects, it should not be 50/50. normally for a cloud pictures clouds would dominate over blue sky
+
+                    cloud shadows can be placed almost anywhere and are highly useful for adding depth
+
+                    keeping land parts mostly dark serves to highlight cloud brightness
+
+
+                    MARINE
+                    there is a major danger of marine pictures having a coldness. almost all marine paintings use a warm wash of something like burnt sienna to avoid this.
+
+
+                    MAIN POINT OF INTEREST
+                    shouldn't be too close to the edge of our draws the eye out.
+
+                    needs to be balanced with secondary points of interest in two or more directions
+
+                    reread this section (pages 59 to 62). didn't get much from here but I guess it is important 
+
+                    MASS PRINCIPLE
                 </ul>
                 <div class="h5">Composition Types</div>
                 <ul>
