adding extra cheatsheet for dockerfile

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                     <div class="section">
                         <h3 class="section-header">Cheat Sheets</h3>
                         <a href="bootstrap-cheatsheet.html">Bootstrap</a>
-                        <a href="dockerCheatsheet.png">Docker</a>
+                        <a href="dockerCheatsheet.png">Docker Command Line</a>
+                        <a href="https://kapeli.com/cheat_sheets/Dockerfile.docset/Contents/Resources/Documents/index">DockerFile</a>
                         <a href="sublime-cheatsheet.html">Sublime</a>
                     </div>
                     <div class="section">
