adding more tonduff info

--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
                 </div>
                 <div class="col-12 col-sm-4">
                     <div class="section">
+                        <h3 class="section-header">Donegal Tonduff</h3>
+                        <a href="Tonduff/DonegalTonduff.txt">Research Info</a>
+                    </div>
+
+                    <div class="section">
                         <h3 class="section-header">Languages</h3>
                         <a href="languages/languageLearning.html">languageLearning</a>
                         <a href="languages/spanish.html">Spanish</a>
