updated some donegal info

--- a/languages/spanish/ankiGenerationChatGPT.html
+++ b/languages/spanish/ankiGenerationChatGPT.html
@@ -20,6 +20,14 @@
         <div class="row">
             <div class="col-12 row-content">
                 <div class="h4" id="contents">Contents</div>
+                <div class="h5">Letter Pronunciation</div>
+                <div class="command letters">
+				Please list the letters in the Spanish alphabet used in Spain, and explain how each of them would be pronounced from the point of view of an English speaker. Format the output as a CSV with commas separating the letter and explanation, and double quotes wrapping each element in the CSV. Include not only simple letters but also letter combinations with special pronunciation rules, e.g., the double l, which sounds like a y. Additionally, include a third column in the output with a Spanish word example for each letter. Where there are multiple pronunciations for a letter, as with the letter c, include an example word for each pronunciation.
+				</div>
+				<div class="h5">Pronouns</div>
+                <div class="command pronouns">
+				Please list the basic pronouns used in the Spanish language as used in Spain, relevant to verb conjugation, and give the meanings of each of them in English. Format the output as a CSV with commas separating the pronoun and its meaning. Include both gender-specific and plural variations of the pronouns, and separate them into individual entries. Additionally, include three extra columns for each entry. The third column should contain the simple English translation without the explanation. The fourth column should contain the phrase "What is this pronoun in TargetLanguage?", in English. The fifth column should contain the phrase "What is this pronoun in SourceLanguage?", in English.				
+				</div>
             </div>
         </div>
         
