--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div class="col-12 col-sm-4">
                     <div class="section">
                         <h3 class="section-header">Donegal Tonduff</h3>
-                        <a href="Tonduff/DonegalTonduff.txt">Research Info</a>
+                        <a href="Tonduff/DonegalTonduff.html">Research Info</a>
                     </div>
 
                     <div class="section">
