added a few models and fixed a typo in the index.html

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div class="col-12 col-sm-4">
                     <div class="section">
                         <h3 class="section-header">Donegal Tonduff</h3>
-                        <a href="Tonduff/DonegalTonduff.html">Research Info</a>
+                        <a href="Tonduff/DonegalTonduff.html">Information</a>
                     </div>
 
                     <div class="section">
@@ -68,7 +68,7 @@
                         <a href="3DPrinting/basics.html">Basics</a>
                         <a href="3DPrinting/klipper.html">Klipper</a>
                         <a href="3DPrinting/buildTips.html">Build Tips</a>
-                        <a href="http://localhost:3002/3DPrinting/octoprint/octoprint.html">Octoprint</a>
+                        <a href="3DPrinting/octoprint/octoprint.html">Octoprint</a>
                     </div>
                     <div class="section">
                         <h3 class="section-header">Raspberry Pi</h3>
