added klipper and fluidd config files

--- a/3DPrinting/klipper.html
+++ b/3DPrinting/klipper.html
@@ -21,6 +21,7 @@
             <div class="col-12 row-content">
                 <div class="h4" id="contents">Contents</div>
                 <div class="content-link"><a href="#installation">Installation Details</a></div>
+                <div class="content-link"><a href="#configFiles">Config Files</a></div>
             </div>
         </div>
         <div class="row content-section">
@@ -131,6 +132,25 @@
                     </li>
                 </ul>
                 
+            </div>
+        </div>
+        <div class="row content-section">
+            <div class="col-12 row-content">
+                <div class="h4" id="configFiles">Config Files</div>
+                <table>
+                    <thead>
+                        <tr>
+                            <td>Date</td>
+                            <td>Location</td>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>15.06.2023</td>
+                            <td><a href="fluidd_klipper_config_15062023.zip">fluidd_klipper_config_15062023.zip</a></td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
