--- a/3DPrinting/filament/whitePLA_BASFInnofil.html
+++ b/3DPrinting/filament/whitePLA_BASFInnofil.html
@@ -21,6 +21,11 @@
         </div>
         <div class="row">
             <div class="col-12 row-content">
+                212g
+                <div class="section">
+                    <div class="h4">Spool Weight (Empty)</div>
+                    <div>212g</div>
+                </div>
                 <div class="section">
                     <div class="h4">Latest Settings</div>
                     <div>Last saved settings for this filament can be found <a href="Innofil3D_Standard Settings.curaprofile">here</a></div>
