--- a/Tonduff/DonegalTonduff.html
+++ b/Tonduff/DonegalTonduff.html
@@ -68,8 +68,9 @@
             <div class="col-12 row-content">
                 <div class="h4" id="internetResearch">Internet Research</div>
                 <div>
-                    <h5>MOBILE UNLIMITED DATA SIM</h5>
-                    Popular options, all 20EUR per month or less include
+                    <h5>MOBILE UNLIMITED DATA SIM with BROADBAND ROUTER</h5>
+                    Popular options, all 20EUR per month or less include. <br>
+                    When choosing a router, use one that allows you to find out which cell tower you're connected to. The tp link I have doesn't allow that and it's a pain.
                     <ul>
                         <li>3.ie (Three)</li>
                         <li>48.ie (Three)</li>
