added some bike info

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     </div>
                     <div class="section">
                         <h3 class="section-header">Sport</h3>
-                        <a href="bike/bikeParts.html">Bike Parts</a>
+                        <a href="bike/bikeInfo.html">Bike Info</a>
                         <a href="sport/snowboarding.html">Snowboarding</a>
                     </div>
                     <div class="section">
