updated airbnb and gardening

--- a/gardening/gardening.html
+++ b/gardening/gardening.html
@@ -22,7 +22,8 @@
                 <div class="h4" id="contents">Contents</div>
                 <div class="content-link"><a href="#general">General Info</a></div>
                 <div class="content-link"><a href="#Monstera">Monstera</a></div>
-        		<div class="content-link"><a href="#DracaenaReflexa">Dracaena Reflexa</a></div>
+                <div class="content-link"><a href="#DracaenaReflexa">Dracaena Reflexa</a></div>
+                <div class="content-link"><a href="#DieffenbachiaTropicSnow">Dieffenbachia Tropic Snow</a></div>
                 <div class="content-link"><a href="#pothos">Pothos</a></div>
                 <div class="content-link"><a href="#Sansevieria">Sansevieria</a></div>
                 <div class="content-link"><a href="#Dracaenamarginata"> Dracaena marginata</a></div>
@@ -90,13 +91,34 @@
                 <h5>Pruning</h5>
                 Dracaenas love to be cut back <br>
                 Where you cut it you'll get one or normally more new stems coming from where it was cut (just like herbs) 
-				<br><br>
-				<h5>Propagation</h5>
-				You can use stem cuttings to propagate new plants, by cutting the stem between 2 leaves - see <a href="https://youtu.be/5RbGKWeD_7A?t=115">https://youtu.be/5RbGKWeD_7A?t=118</a> <br>
-				If you chop a stem in two, you can plant the branch in potting mix, and the stem will grow new stems. So, 2 plants from 1.
-				<br><br>
-				<h5>Troubleshooting</h5>
-				<strong>Yellow or brown leaf tips</strong> - may be due to too many minerals in tap water - try using rainwater or distilled water. Alternatively, trim the dodgy end off (trim it into a leaf end shape so you end up with a shorter but normal looking leaf shape)
+                <br><br>
+                <h5>Propagation</h5>
+                You can use stem cuttings to propagate new plants, by cutting the stem between 2 leaves - see <a href="https://youtu.be/5RbGKWeD_7A?t=115">https://youtu.be/5RbGKWeD_7A?t=118</a> <br>
+                If you chop a stem in two, you can plant the branch in potting mix, and the stem will grow new stems. So, 2 plants from 1.
+                <br><br>
+                <h5>Troubleshooting</h5>
+                <strong>Yellow or brown leaf tips</strong> - may be due to too many minerals in tap water - try using rainwater or distilled water. Alternatively, trim the dodgy end off (trim it into a leaf end shape so you end up with a shorter but normal looking leaf shape)
+            </div>
+        </div>
+        <div class="row content-section">
+            <div class="col-12 row-content">
+                <div class="h4" id="DieffenbachiaTropicSnow">Dieffenbachia Tropic Snow</div>
+                <h5>Where should it be?</h5>
+                The corner of a room, with at least medium indirect sunlight is perfect. Rotate regularly for shape as it grows toward the light. Pets and children should be kept away from Dieffenbachia as all parts of this plant are POISONOUS.
+                <br><br>
+                <h5>Watering</h5>
+                Dieffenbachia prefer soil that is consistently and lightly moist, but not soggy. Aim to water when the top inch or two of the soil is dry, but if the plant is in a lower light condition, it can comfortably dry out a little further. Don't allow it to sit in water
+                <br><br>
+                <h5>Pruning</h5>
+                Remember, the sap is poisonous and it can cause skin irritation <br>
+                Prune any time of year, when leaves are damaged or dying, or the plant is top heavy <br>
+                Cut the upper stem back to a leaf node. If there are damaged leaves, remove the leaf up to the stem, just don’t cut into the main stem.
+                <br><br>
+                <h5>Propagation</h5>
+                MAybe better not since it's poisonous and we'll forget.
+                <br><br>
+                <h5>Troubleshooting</h5>
+
             </div>
         </div>
         <div class="row content-section">
