few models, business ideas and painting

--- a/painting/paintingTips.html
+++ b/painting/paintingTips.html
@@ -64,6 +64,8 @@
                     <li><strong>Adjust the color</strong>. Compare the color with the goal and think through the colors from above "which one is more yellow, which one is more orange, which one is more red...purple...blue...green?". If your value moves too far off as you adjust the color, correct the value again before continuing</li>
                     <li>Gradually adjusting the color and keeping the value in check will let you hone in on the shade you want</li>
                 </ul>
+                <div><a href="https://www.youtube.com/watch?v=J50vopOjYcA&list=WL&index=17">This video from 
+Painting with Paint Basket </a> also has some good tips on mixing colors</div>
                 <div class="h5">Tips</div>
                 <ul>
                     <li>Complementary colors will mute each other</li>
