updated a few documents

--- a/Tonduff/DonegalTonduff.html
+++ b/Tonduff/DonegalTonduff.html
@@ -21,6 +21,7 @@
             <div class="col-12 row-content">
                 <div class="h4" id="contents">Contents</div>
                 <div class="content-link"><a href="#basics">Basics</a></div>
+                <div class="content-link"><a href="#grants">Grants</a></div>
         		<div class="content-link"><a href="#land">Land</a></div>
                 <div class="content-link"><a href="#internetResearch">Internet Research</a></div>
             </div>
@@ -50,6 +51,14 @@
                         </td>
                     </tr>
                 </table>
+            </div>
+        </div> 
+        <div class="row content-section">
+            <div class="col-12 row-content">
+                <div class="h4" id="grants">Grants</div>
+                Grant of up to 2400EUR available for solar. See <a href="https://www.seai.ie/grants/home-energy-grants/solar-electricity-grant/">Solar Electricity Grant</a><br>
+                Up to 6500EUR available for installation of a ground source heat pump. See <a href="https://www.seai.ie/grants/home-energy-grants/heat-pump-systems/">Heat Pump System Grant</a><br>
+                Potentially, excess electricity could be sold back to the grids
             </div>
         </div>
         <div class="row content-section">
