--- a/gardening/gardening.html
+++ b/gardening/gardening.html
@@ -112,10 +112,11 @@
                 <h5>Pruning</h5>
                 Remember, the sap is poisonous and it can cause skin irritation <br>
                 Prune any time of year, when leaves are damaged or dying, or the plant is top heavy <br>
-                Cut the upper stem back to a leaf node. If there are damaged leaves, remove the leaf up to the stem, just don’t cut into the main stem.
+                Cut the upper stem back to a leaf node. If there are damaged leaves, remove the leaf up to the stem, just don’t cut into the main stem. <br>
+                To keep dieffenbachia from growing leggy, pinch or prune out the new growth at the top regularly. This will encourage your plant to grow bushier, and stay more compact.
                 <br><br>
                 <h5>Propagation</h5>
-                MAybe better not since it's poisonous and we'll forget.
+                Maybe better not since it's poisonous and we'll forget.
                 <br><br>
                 <h5>Troubleshooting</h5>
 
