updating a few notes

--- a/Tonduff/DonegalTonduff.html
+++ b/Tonduff/DonegalTonduff.html
@@ -21,6 +21,7 @@
             <div class="col-12 row-content">
                 <div class="h4" id="contents">Contents</div>
                 <div class="content-link"><a href="#basics">Basics</a></div>
+                <div class="content-link"   ><a href="#map">Google Map</a></div>
                 <div class="content-link"><a href="#grants">Grants</a></div>
         		<div class="content-link"><a href="#land">Land</a></div>
                 <div class="content-link"><a href="#internetResearch">Internet Research</a></div>
@@ -53,6 +54,12 @@
                 </table>
             </div>
         </div> 
+        <div class="row content-section">
+            <div class="col-12 row-content">
+                <div class="h4" id="map">Google Map</div>
+                <a href="https://www.google.com/maps/d/u/0/edit?mid=1yr-md-VN64HZ4aGYYdXMQ8QEVDQkPJs&usp=sharing">Link to My Map on google maps with features marked in</a>. I also have data on google earth.
+            </div>
+        </div>
         <div class="row content-section">
             <div class="col-12 row-content">
                 <div class="h4" id="grants">Grants</div>
