--- a/painting/paintingTips.html
+++ b/painting/paintingTips.html
@@ -143,7 +143,7 @@ Painting with Paint Basket </a> also has some good tips on mixing colors</div>
 
 
                     MAIN POINT OF INTEREST
-                    shouldn't be too close to the edge of our draws the eye out.
+                    shouldn't be too close to the edge paintings or it draws the eye out.
 
                     needs to be balanced with secondary points of interest in two or more directions
 
